--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 START_BLOCK=15022030
 META_WARDEN_CONTRACT=0xa5fdb0822bf82de3315f1766574547115e99016f
 MARKET_TOFU_CONTRACT=0x449D05C544601631785a7C062DCDFF530330317e
+MARKET_NFTRADE_CONTRACT=0xcFB6Ee27d82beb1B0f3aD501B968F01CD7Cc5961
 WBNB_CONTRACT=0xbb4CdB9CBd36B01bD1cBaEBF2De08d9173bc095c
 BSC_RPC=https://bsc-dataseed.binance.org/
